--- a/recipe-page/index.html
+++ b/recipe-page/index.html
@@ -88,8 +88,8 @@
             <td><strong>20g</strong></td>
           </tr>
           <tr>
-            <td>Fat</td>
-            <td><strong>22g</strong></td>
+            <td class="notborder">Fat</td>
+            <td class="notborder"><strong>22g</strong></td>
           </tr>
         </tbody>
       </table>
