--- a/social-links-profile/index.html
+++ b/social-links-profile/index.html
@@ -9,35 +9,33 @@
     <title>Frontend Mentor | Social links profile</title>
   </head>
   <body>
-    <main>
-      <section id="image-profile">
-        <img src="assets/images/avatar-jessica.jpeg" alt="Avatar Jessica" />
-      </section>
-
-      <section id="section-content">
-        <header id="section-header">
-          <h1>Jessica Randall</h1>
-          <h4>London, United Kingdom</h4>
-          <p>"Front-end developer and avid reader."</p>
-        </header>
-
-        <section id="section-links">
-          <a href="">GitHub</a>
-          <a href="">Frontend Mentor</a>
-          <a href="">LinkedIn</a>
-          <a href="">Twitter</a>
-          <a href="">Instagram</a>
-        </section>
-      </section>
-    </main>
-    <footer class="attribution">
+      <main>
+          <section id="image-profile">
+            <img src="assets/images/avatar-jessica.jpeg" alt="Avatar Jessica" />
+          </section>
+          <section id="section-content">
+            <header id="section-header">
+              <h1>Jessica Randall</h1>
+              <h4>London, United Kingdom</h4>
+              <p>"Front-end developer and avid reader."</p>
+            </header>
+            <section id="section-links">
+              <a href="#">GitHub</a>
+              <a href="#">Frontend Mentor</a>
+              <a href="#">LinkedIn</a>
+              <a href="#">Twitter</a>
+              <a href="#">Instagram</a>
+            </section>
+      </main>
+    </div>
+    <footer>
       <p>
         Challenge by
         <a
           href="https://www.frontendmentor.io?ref=challenge"
           target="_blank"
           rel="noopener"
-          >Frontend Mentor</a>
+          >Frontend Mentor.</a>
       </p>
       <p>Coded by <a href="#">Your Name Here</a>.</p>
     </footer>
