--- a/social-links-profile/index.html
+++ b/social-links-profile/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="media-queries.css">
+    <link rel="stylesheet" href="assets/styles/style.css" />
+    <link rel="stylesheet" href="assets/styles/media-queries.css">
     <title>Frontend Mentor | Social links profile</title>
   </head>
   <body>
