Animation added to link footer

--- a/social-links-profile/index.html
+++ b/social-links-profile/index.html
@@ -37,7 +37,7 @@
           rel="noopener"
           >Frontend Mentor.</a>
       </p>
-      <p>Coded by <a href="#">Your Name Here</a>.</p>
+      <p>Coded by <a href="#">Mateus Santos</a>.</p>
     </footer>
   </body>
 </html>
