update time of animation link footer

--- a/social-links-profile/index.html
+++ b/social-links-profile/index.html
@@ -35,7 +35,7 @@
           href="https://www.frontendmentor.io?ref=challenge"
           target="_blank"
           rel="noopener"
-          >Frontend Mentor.</a>
+          >Frontend Mentor</a>.
       </p>
       <p>Coded by <a href="#">Mateus Santos</a>.</p>
     </footer>
