--- a/blog-preview-card/index.html
+++ b/blog-preview-card/index.html
@@ -23,7 +23,7 @@
 
     <footer class="attribution">
       Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+      <a href="https://www.frontendmentor.io?ref=challenge" rel="noopener noreferrer" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Your Name Here</a>.
     </footer>
