--- a/blog-preview-card/index.html
+++ b/blog-preview-card/index.html
@@ -6,26 +6,37 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png" />
     <link rel="stylesheet" href="styles/style.css">
     <title>Frontend Mentor | Blog preview card</title>
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
-    Learning Published 21 Dec 2023 HTML & CSS foundations These languages are
-    the backbone of every website, defining structure, content, and
-    presentation. Greg Hooper
+    <main>
+      <section id="image-card">
+        <img src="assets/images/illustration-article.svg" alt="illustration article">
+      </section>
 
-    <footer class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" rel="noopener noreferrer" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      <section id="content">
+        <p id="label">Learning</p>
+        <p>Published 21 Dec 2023</p>
+        <a href=""><h3>HTML & CSS foundations</h3></a>
+        <p id="description">
+          These languages are
+          the backbone of every website, defining structure, content, and
+          presentation.
+        </p>
+        <section id="user">
+          <img src="assets/images/image-avatar.webp" alt="image avatar">
+          <p>Greg Hooper</p>
+        </section>
+      </section>
+    </main>
+
+    <footer>
+      <p>
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" rel="noopener noreferrer" target="_blank"
+          >Frontend Mentor</a
+        >.
+      </p>
+      <p>Coded by <a href="#">Mateus Santos</a>.</p>
     </footer>
   </body>
 </html>
