--- a/4-faq-accordion/index.html
+++ b/4-faq-accordion/index.html
@@ -5,19 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="styles/media-queries.css">
   <title>Frontend Mentor | FAQ accordion</title>
   </style>
 </head>
 <body>
+  <section id="background"></section>
   <main>
     <section id="section-faqs">
+      <img src="assets/images/icon-star.svg" alt="icon-star.svg">
       <h1>FAQs</h1>
     </section>
 
     <section class="asks">
       <section class="ask-item">
         <h3>What is Frontend Mentor, and how will it help me?</h3>
-        <img src="assets/images/icon-plus.svg" alt="icon-plus">
+        <img src="assets/images/icon-minus.svg" alt="icon-plus" class="image">
       </section>
       <section class="answers">
         <p>
@@ -29,9 +32,9 @@
     <section class="asks">
       <section class="ask-item">
         <h3>Is Frontend Mentor free?</h3>
-        <img src="assets/images/icon-plus.svg" alt="icon-plus">
+        <img src="assets/images/icon-plus.svg" alt="icon-plus" class="image">
       </section>
-      <section class="answers">
+      <section class="answers oculta">
         <p>
           Yes, Frontend Mentor offers both free and premium coding challenges, with the free option providing access to a range of projects suitable for all skill levels.
         </p>
@@ -41,9 +44,9 @@
     <section class="asks">
       <section class="ask-item">
         <h3>Can I use Frontend Mentor projects in my portfolio?</h3>
-        <img src="assets/images/icon-plus.svg" alt="icon-plus">
+        <img src="assets/images/icon-plus.svg" alt="icon-plus" class="image">
       </section>
-      <section class="answers">
+      <section class="answers oculta">
         <p>
           Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent way to showcase your skills to potential employers!
         </p>
@@ -52,10 +55,10 @@
 
     <section class="asks">
       <section class="ask-item">
-        <h3>  How can I get help if I'm stuck on a Frontend Mentor challenge?</h3>
-        <img src="assets/images/icon-plus.svg" alt="icon-plus">
+        <h3>How can I get help if I'm stuck on a challenge?</h3>
+        <img src="assets/images/icon-plus.svg" alt="icon-plus" class="image">
       </section>
-      <section class="answers">
+      <section class="answers oculta">
         <p>
           The best place to get help is inside Frontend Mentor's Discord community. There's a help 
           channel where you can ask questions and seek support from other community members.
@@ -68,5 +71,7 @@
     <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener noreferrer">Frontend Mentor</a>. </p>
     <p>Coded by <a href="#">Mateus Santos</a>.</p>
   </footer>
+
+  <script src="js/script.js"></script>
 </body>
 </html>
