correction in href of submit

--- a/7-interactive-rating-component/index.html
+++ b/7-interactive-rating-component/index.html
@@ -22,7 +22,7 @@
       <p class="number"><span>4</span></p>
       <p class="number"><span>5</span></p>
     </form>
-    <a href="page-submit.html" id="btnSubmit"><span>Submit</span></a>
+    <a href="" id="btnSubmit"><span>Submit</span></a>
   </main>
 
   <footer>
