--- a/7-interactive-rating-component/index.html
+++ b/7-interactive-rating-component/index.html
@@ -30,7 +30,7 @@
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener noreferrer">Frontend Mentor</a>. 
     </p>
     <p>
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Mateus Santos</a>.
     </p>
   </footer>
 
