--- a/8-qr-code-component/index.html
+++ b/8-qr-code-component/index.html
@@ -2,21 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="sttles/style.css">  
+  <link rel="stylesheet" href="styles/style.css">  
   <title>Frontend Mentor | QR code component</title>
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
   <main>
     <section id="image">
       <img src="images/image-qr-code.png" alt="image-qr-code">
     </section>
-
     <section id="content">
       <h3>Improve your front-end skills by building projects</h3>
       <p>
