--- a/10-order-summary-component/index.html
+++ b/10-order-summary-component/index.html
@@ -6,38 +6,39 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="styles/style.css">
   <title>Frontend Mentor | Order summary card</title>
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
   <main>
-    <div id="image"></div>
-    <img src="images/illustration-hero.svg" alt="illustration-hero">
+    <div id="image">
+      <img src="images/illustration-hero.svg" alt="illustration-hero">
+    </div>
+    
     <section id="content">
-      <h3> Order Summary</h3>
+      <h1>Order Summary</h1>
       <p>
         You can now listen to millions of songs, audiobooks, and podcasts on any 
         device anywhere you like!
       </p>
       <div id="plan">
-        <img src="images/icon-music.svg" alt="icon-music">
-        <div id="plan-description">
-          <p>Annual Plan</p>
-          <p>$59.99/year</p>
+        <div id="plan-data">
+          <img src="images/icon-music.svg" alt="icon-music">
+
+          <div id="plan-description">
+            <p><strong>Annual Plan</strong></p>
+            <p>$59.99/year</p>
+          </div>
         </div>
-        <a href="#">Change</a>
+        <a id="change" href="#">Change</a>
       </div>
 
-      <a href="#">Proceed to Payment</a>
-      <a href="#">Cancel Order</a>
+      <a id="pay" href="#">Proceed to Payment</a>
+      <a id="cancel" href="#">Cancel Order</a>
     </section>
   </main>
   
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
+  <footer>
+    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener noreferrer">Frontend Mentor</a>. </p>
+    <p>Coded by <a href="#">Mateus Santos</a>.</p>
+  </footer>
 </body>
 </html>
