--- a/11-stats-preview-card-component/index.html
+++ b/11-stats-preview-card-component/index.html
@@ -5,20 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="styles/medias-queries.css">
   <title>Frontend Mentor | Stats preview card component</title>
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
   <main>
-    <div id="image">
-      <img src="images/image-header-desktop.jpg" alt="image-header-desktop">
-    </div>
+    <div id="image"></div>
 
     <section id="content">
-      <h1>Get insights that help your business grow.</h1>
+      <h1 id="main-title">Get <span>insights</span> that help your business grow.</h1>
       <p>
         Discover the benefits of data analytics and make better decisions regarding revenue, customer 
         experience, and overall efficiency.
@@ -42,9 +37,10 @@
       </div>
     </section>
   </main>
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
+
+  <footer class="attribution">
+    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener noreferrer">Frontend Mentor</a>. </p>
+    <p>Coded by <a href="#">Mateus Santos</a>.</p>
+  </footer>
 </body>
 </html>
