--- a/12-columns-preview-card-component/index.html
+++ b/12-columns-preview-card-component/index.html
@@ -5,17 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="styles/media-queries.css">
   <title>Frontend Mentor | 3-column preview card component</title>
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
   <main>
     <section id="car-sedans" class="cars">
       <div class="image"><img src="images/icon-sedans.svg" alt="icon-sedans"></div>
-      <h2>Sedans</h2>
+      <h1>Sedans</h1>
       <p>
         Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
         or on your next road trip.
@@ -25,7 +22,7 @@
 
     <section id="car-suvs" class="cars">
       <div class="image"><img src="images/icon-suvs.svg" alt="icon-suvs"></div>
-      <h2>SUVs</h2>
+      <h1>SUVs</h1>
       <p>
         Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
         and off-road adventures.
@@ -35,7 +32,7 @@
 
     <section id="car-luxury" class="cars">
       <div class="image"><img src="images/icon-luxury.svg" alt="icon-luxury"></div>
-      <h2>Luxury</h2>
+      <h1>Luxury</h1>
       <p>
         Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
         rental and arrive in style.
@@ -44,9 +41,9 @@
     </section>
   </main>
   
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
+  <footer class="attribution">
+    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener noreferrer">Frontend Mentor</a>.</p>
+    <p>Coded by <a href="#">Mateus Santos</a>.</p>
+  </footer>
 </body>
 </html>
