--- a/13-profile-card-component/index.html
+++ b/13-profile-card-component/index.html
@@ -5,11 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="styles/media-queries.css">
   <title>Frontend Mentor | Profile card component</title>
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
   <main>
@@ -21,7 +18,7 @@
         <img src="images/image-victor.jpg" alt="">
       </div>
       <h3>Victor Crest <span>26</span></h3>
-      <p>London</p>
+      <p id="country">London</p>
       <div id="data">
         <div id="followers">
           <span>80K</span>
@@ -41,9 +38,9 @@
     </section>
   </main>
 
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>. -->
-  </div>
+  <footer>
+    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener noreferrer">Frontend Mentor</a>. </p>
+    <p>Coded by <a href="#">Mateus Santos</a>.</p>
+  </footer>
 </body>
 </html>
