--- a/14-faq-accordion-card/index.html
+++ b/14-faq-accordion-card/index.html
@@ -10,7 +10,7 @@
       href="./images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="styles/style.css" />
-    <link rel="stylesheet" href="styles/media-queries.css">
+    <link rel="stylesheet" href="styles/media-queries.css" />
     <title>Frontend Mentor | FAQ Accordion Card</title>
   </head>
   <body>
@@ -21,12 +21,12 @@
             id="woman-image"
             src="images/illustration-woman-online-desktop.svg"
             alt="illustration-woman-online-desktop"
-            />
-            <img
-              id="background-image"
-              src="images/bg-pattern-desktop.svg"
-              alt="bg-pattern-desktop"
-            />
+          />
+          <img
+            id="background-image"
+            src="images/bg-pattern-desktop.svg"
+            alt="bg-pattern-desktop"
+          />
         </div>
         <img
           id="box-image"
@@ -51,7 +51,9 @@
 
         <section>
           <div class="asks">
-            <h4 class="title-asks open">What is the maximum file upload size?</h4>
+            <h4 class="title-asks open">
+              What is the maximum file upload size?
+            </h4>
             <img
               class="icon-up"
               src="images/icon-arrow-down.svg"
@@ -66,7 +68,7 @@
 
         <section>
           <div class="asks">
-            <h4 class="title-asks">Can I cancel my subscription?</h4>
+            <h4 class="title-asks">How do I reset my password?</h4>
 
             <img src="images/icon-arrow-down.svg" alt="icon-arrow-down" />
           </div>
@@ -78,22 +80,40 @@
 
         <section>
           <div class="asks">
-            <h4 class="title-asks">How do I reset my password?</h4>
+            <h4 class="title-asks">Can I cancel my subscription?</h4>
             <img src="images/icon-arrow-down.svg" alt="icon-arrow-down" />
           </div>
           <p class="oculta answer">
             Yes! Send us a message and we’ll process your request no questions
-            asked. Do you provide apitional support? Chat and email support is
-            available 24/7. Phone lines are open during normal business hours.
+            asked.
+          </p>
+        </section>
+
+        <section>
+          <div class="asks">
+            <h4 class="title-asks">Do you provide additional support?</h4>
+            <img src="images/icon-arrow-down.svg" alt="icon-arrow-down" />
+          </div>
+          <p class="oculta answer">
+            Chat and email support is available 24/7. Phone lines are open
+            during normal business hours.
           </p>
         </section>
       </section>
     </main>
 
-    <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener noreferrer">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
-  <script src="js/script.js"></script>
+    <footer>
+      <p>
+        Challenge by
+        <a
+          href="https://www.frontendmentor.io?ref=challenge"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Frontend Mentor</a>.
+      </p>
+      <p>Coded by <a href="#">Mateus Santos</a>.</p>
+    </footer>
+
+    <script src="js/script.js"></script>
   </body>
 </html>
