--- a/15-social-proof-section-master/index.html
+++ b/15-social-proof-section-master/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/style.css" />
     <link
       rel="icon"
       type="image/png"
@@ -11,105 +11,99 @@
       href="./images/favicon-32x32.png"
     />
     <title>Frontend Mentor | Social proof section</title>
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
     <main>
-      <section id="introduce">
-        <h1>10,000+ of our users love our products.</h1>
-        <p>
-          We only provide great products combined with excellent customer service.
-          See what our satisfied customers are saying about our services.
-        </p>
-      </section>
-
-      <section id="assessments">
-        <div id="assessmens-item-1">
-          <div class="stars-container">
-            <img src="images/icon-star.svg" alt="icon-star">
-            <img src="images/icon-star.svg" alt="icon-star">
-            <img src="images/icon-star.svg" alt="icon-star">
-            <img src="images/icon-star.svg" alt="icon-star">
-            <img src="images/icon-star.svg" alt="icon-star">
-            <img src="images/icon-star.svg" alt="icon-star">
-          </div>
+      <div id="container-introduce">
+        <section id="introduce">
+          <h1>10,000+ of our users love our products.</h1>
           <p>
-            Rated 5 Stars in Reviews
+            We only provide great products combined with excellent customer
+            service. See what our satisfied customers are saying about our
+            services.
           </p>
-        </div>
+        </section>
 
-        <div id="assessmens-item-2">
-          <div class="stars-container">
-            <img src="images/icon-star.svg" alt="icon-star">
-            <img src="images/icon-star.svg" alt="icon-star">
-            <img src="images/icon-star.svg" alt="icon-star">
-            <img src="images/icon-star.svg" alt="icon-star">
-            <img src="images/icon-star.svg" alt="icon-star">
-            <img src="images/icon-star.svg" alt="icon-star">
+        <div id="assessments">
+          <div class="assessments-item">
+            <div class="stars-container">
+              <img src="images/icon-star.svg" alt="icon-star" />
+              <img src="images/icon-star.svg" alt="icon-star" />
+              <img src="images/icon-star.svg" alt="icon-star" />
+              <img src="images/icon-star.svg" alt="icon-star" />
+              <img src="images/icon-star.svg" alt="icon-star" />
+            </div>
+            <p>Rated 5 Stars in Reviews</p>
           </div>
-          <p>
-            Rated 5 Stars in Report Guru
-          </p>
-        </div>
 
-        <div id="assessmens-item-3">
-          <div class="stars-container">
-            <img src="images/icon-star.svg" alt="icon-star">
-            <img src="images/icon-star.svg" alt="icon-star">
-            <img src="images/icon-star.svg" alt="icon-star">
-            <img src="images/icon-star.svg" alt="icon-star">
-            <img src="images/icon-star.svg" alt="icon-star">
-            <img src="images/icon-star.svg" alt="icon-star">
+          <div class="assessments-item">
+            <div class="stars-container">
+              <img src="images/icon-star.svg" alt="icon-star" />
+              <img src="images/icon-star.svg" alt="icon-star" />
+              <img src="images/icon-star.svg" alt="icon-star" />
+              <img src="images/icon-star.svg" alt="icon-star" />
+              <img src="images/icon-star.svg" alt="icon-star" />
+            </div>
+            <p>Rated 5 Stars in Report Guru</p>
           </div>
-          <p>
-            Rated 5 Stars in BestTech
-          </p>
+
+          <div class="assessments-item">
+            <div class="stars-container">
+              <img src="images/icon-star.svg" alt="icon-star" />
+              <img src="images/icon-star.svg" alt="icon-star" />
+              <img src="images/icon-star.svg" alt="icon-star" />
+              <img src="images/icon-star.svg" alt="icon-star" />
+              <img src="images/icon-star.svg" alt="icon-star" />
+            </div>
+            <p>Rated 5 Stars in BestTech</p>
+          </div>
         </div>
-      </section>
+      </div>
 
       <div id="container-testimonials">
-        <section id="test1imonial-item-1">
+        <section class="testimonial-item">
           <div class="user">
-            <img src="images/image-colton.jpg" alt="image-colton">
-            <h3>Colton Smith 
+            <img src="images/image-colton.jpg" alt="image-colton" />
+            <div  class="data">
+              <h3>Colton Smith</h3>
               <span>Verified Buyer</span>
-            </h3>
-            <p>
-              "We needed the same printed design as the one we had ordered a week prior.
-              Not only did they find the original order, but we also received it in time.
-              Excellent!"
-            </p>
+            </div>
           </div>
+          <p>
+            "We needed the same printed design as the one we had ordered a week
+            prior. Not only did they find the original order, but we also
+            received it in time. Excellent!"
+          </p>
+        </section>
 
+        <section class="testimonial-item">
           <div class="user">
-            <img src="images/image-irene.jpg" alt="image-colton">
-            <h3>Irene Roberts 
+            <img src="images/image-irene.jpg" alt="image-colton" />
+            <div class="data">
+              <h3>Irene Roberts</h3>
               <span>Verified Buyer</span>
-            </h3>
-            <p>
-              "Customer service is always excellent and very quick turn around. Completely
-              delighted with the simplicity of the purchase and the speed of delivery."
-            </p>
+            </div>
           </div>
+          <p>
+            "Customer service is always excellent and very quick turn around.
+            Completely delighted with the simplicity of the purchase and the
+            speed of delivery."
+          </p>
+        </section>
 
+        <section class="testimonial-item">
           <div class="user">
-            <img src="images/image-anne.jpg" alt="image-colton">
-            <h3>Anne Wallace 
+            <img src="images/image-anne.jpg" alt="image-colton" />
+            <div class="data">
+              <h3>Anne Wallace</h3>
               <span>Verified Buyer</span>
-            </h3>
-            <p>
-              "Put an order with this company and can only praise them for the very high
-              standard. Will definitely use them again and recommend them to everyone!"
-            </p>
+            </div>
           </div>
+          <p>
+            "Put an order with this company and can only praise them for the
+            very high standard. Will definitely use them again and recommend
+            them to everyone!"
+          </p>
         </section>
       </div>
     </main>
