desktop version completed

--- a/15-social-proof-section-master/index.html
+++ b/15-social-proof-section-master/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/media-queries.css" />
     <link
       rel="icon"
       type="image/png"
@@ -64,7 +65,7 @@
         <section class="testimonial-item">
           <div class="user">
             <img src="images/image-colton.jpg" alt="image-colton" />
-            <div  class="data">
+            <div class="data">
               <h3>Colton Smith</h3>
               <span>Verified Buyer</span>
             </div>
@@ -108,11 +109,17 @@
       </div>
     </main>
 
-    <!-- <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div> -->
+    <footer class="attribution">
+      <p>
+        Challenge by
+        <a
+          href="https://www.frontendmentor.io?ref=challenge"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Frontend Mentor</a
+        >.
+      </p>
+      <p href="">Coded by <a href="#">Mateus Santos</a>.</p>
+    </footer>
   </body>
 </html>
