--- a/16-article-preview-component/index.html
+++ b/16-article-preview-component/index.html
@@ -49,7 +49,7 @@
   
   <footer class="attribution">
     <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener nnoreferrer">Frontend Mentor</a>. </p>
-    <p>Coded by <a href="#">Your Name Here</a>.</p>
+    <p>Coded by <a href="#">Mateus Santos</a>.</p>
   </footer>
 
   <script src="https://kit.fontawesome.com/0a1412cd70.js" crossorigin="anonymous"></script>
