update desktop version

--- a/18-base-apparel-coming-soon/index.html
+++ b/18-base-apparel-coming-soon/index.html
@@ -34,9 +34,7 @@
       </form>
     </section>
 
-    <div id="image">
-      <img src="images/hero-desktop.jpg" alt="hero-desktop">
-    </div>
+    <div id="image"></div>
   </main>
   
   <!-- <footer>
